修正 App.css，移除錯誤的 background 和 url 設定

--- a/cd.client/src/App.css
+++ b/cd.client/src/App.css
@@ -1,7 +1,9 @@
-﻿﻿﻿ /********** [ 全域樣式 ] **********/
+﻿/********** [ 全域樣式 ] **********/
 body {
     font-family: "Helvetica", Arial, "微軟正黑體", Veranda, sans-serif;
     font-size: 11pt;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -17,253 +19,14 @@ a {
         color: #FF6600;
     }
 
+/********** [ 主要佈局 ] **********/
 
-/* 新增加的css */
-
-.main-top-font {
-    color: black;
-    font-size: 11px;
-}
-
-.main-h6 {
-    color: #4c9479;
-    font-weight: bold;
-}
-
-.title-text {
-    color: #4c9479;
-    font-size: 14px;
-    font-weight: bold;
-}
-
-.line {
-    padding-top: 0px;
-    border-top: 2px solid #4c9479;
-    width: 100%;
-}
-
-fieldset.box {
-    border-radius: 5px;
-    border: 2px solid #c4c4c4;
-    padding: 2px 12px 8px 12px;
-    width: 98%;
-    height: auto;
-    font-size: 13px;
-}
-
-fieldset.search {
-    border-radius: 5px;
-    border: 2px solid #c4c4c4;
-    padding: 2px 12px 8px 12px;
-    width: 98%;
-    height: auto;
-    font-size: 13px;
-}
-
-legend {
-    color: #000;
-    padding: 0px 6px 3px 6px;
-    font-weight: 600;
-    background: white;
-    font-size: 16px;
-    width: auto;
-}
-
-.input-s {
-    border-radius: 3px;
-    height: 1.2rem;
-    border-width: 1px;
-    width: 5rem;
-}
-
-.input-m {
-    border-radius: 3px;
-    height: 1.2rem;
-    border-width: 1px;
-    width: 10rem;
-}
-
-.input-l {
-    border-radius: 3px;
-    height: 1.2rem;
-    border-width: 1px;
-    width: 15rem;
-}
-
-.input-xl {
-    border-radius: 3px;
-    height: 1.2rem;
-    border-width: 1px;
-    width: 20rem;
-}
-
-.div-font-size {
-    font-size: 13px;
-}
-
-.td-div1 {
-    width: auto;
-    height: 2.2em;
-    font-size: 13px;
-}
-
-.button {
-    margin: 1px;
-    padding: 8px 6px 5px 1px;
-    font-size: 12px;
-    border-radius: 0.3rem;
-    width: auto;
-    height: 30px;
-    font-weight: bold;
-    -webkit-box-shadow: 2px 2px 6px #BDBDBD;
-    box-shadow: 2px 2px 6px #BDBDBD;
-    border: 1px solid #4c9479;
-    display: inline-flex;
-    color: #4c9479;
-    /* background-image: url(url); */
-    background-color: #FFFFFF;
-    text-indent: 5px;
-    text-align: center;
-    line-height: 100%;
-}
-
-span.btn-icon {
-    font-size: 5px;
-    width: 10px;
-    height: 10px;
-    line-height: 25px;
-    text-align: center;
-    padding: 0px 0px 0px 3px
-}
-
-span.font {
-    font-family: "微軟正黑體";
-    font-size: 1em;
-    padding-top: 10px;
-    padding-left: 8px;
-    padding-right: 8px;
-    text-align: center;
-}
-
-.button:hover {
-    color: #FFFFFF;
-    background-color: #a6d578;
-    -webkit-box-shadow: 2px 2px 6px 2px #fff;
-    box-shadow: 2px 2px 6px 2px #fff;
-    border-color: #4c9479;
-}
-
-.button_disable {
-    margin: 1px;
-    padding: 8px 6px 5px 1px;
-    font-size: 12px;
-    border-radius: 0.3rem;
-    width: auto;
-    height: 30px;
-    font-weight: bold;
-    -webkit-box-shadow: 2px 2px 6px #BDBDBD;
-    box-shadow: 2px 2px 6px #BDBDBD;
-    border: 1px solid rgba(124,125,125,1.00);
-    display: inline-flex;
-    color: rgba(111,112,112,1.00);
-    background-image: url(url);
-    background-color: #DFDFDF;
-    text-indent: 5px;
-    text-align: center;
-    line-height: 100%;
-}
-
-button:disabled {
-    background-color: #DFDFDF;
-    color: rgba(111,112,112,1.00);
-    border: 1px solid rgba(124,125,125,1.00);
-}
-
-input:disabled {
-    background-color: #ffffcc;
-    /* 修改默認黃色樣式 */
-    color: #666;
-    opacity: 1;
-    /* 默認的不透明級別為0.3 */
-    -webkit-text-fill-color: #666;
-    /* 字體顏色安卓與IOS適配 */
-    -webkit-opacity: 1;
-}
-
-.pagination {
-    display: inline-block;
-    font-size: 0.8rem;
-}
-
-    .pagination a {
-        color: black;
-        float: left;
-        padding: 2px 8px;
-        text-decoration: none;
-        border: 1px solid #ddd;
-    }
-
-        .pagination a.active {
-            background-color: #af7ac2;
-            color: white;
-            border: 1px solid #af7ac2;
-        }
-
-        .pagination a:hover:not(.active) {
-            background-color: #ddd;
-        }
-
-        .pagination a:first-child {
-            border-top-left-radius: 5px;
-            border-bottom-left-radius: 5px;
-        }
-
-        .pagination a:last-child {
-            border-top-right-radius: 5px;
-            border-bottom-right-radius: 5px;
-        }
-
-.pagination-font-size {
-    font-size: 0.5rem;
-}
-
-.table-form {
-    border-radius: 5px;
-    width: auto;
-    font-size: 13px;
-    margin: 2px;
-    padding-top: 8px;
-    padding-right: 8px;
-    padding-left: 8px;
-    padding-bottom: 8px;
-    border: 1px solid #96b678;
-}
-
-.table-td {
-    width: auto;
-    height: 2.2em;
-    font-size: 13px;
-    border-radius: 5px;
-    background-color: #a6d578;
-    padding-left: 5px;
-}
-
-.table-td-delete {
-    width: auto;
-    height: 2.2em;
-    font-size: 13px;
-    border-radius: 5px;
-    background-color: #fcdada;
-    padding-left: 5px;
-    color: #FF0000;
-}
-
+/* 頁首區塊 */
 div#header_wrap {
     background-color: #4c9479;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     display: block;
-    position: relative;
     width: 100%;
     box-sizing: border-box;
     height: 100px;
@@ -273,108 +36,97 @@ div#header_wrap {
     left: 0;
 }
 
-
-/* 頁首區塊樣式 */
-
-div#header {
-    display: inline-block;
-    width: 500px;
-    z-index: 200;
-    position: relative;
-    float: left;
-}
-
-
-/* 網站ICON */
-
+/* LOGO 圖示 */
 div#header_icon {
-    background: #F2F2F2 url("../images/LEGO_logo.png") no-repeat center center;
+    background: #F2F2F2 url("/images/LEGO_logo.png") no-repeat center center;
     background-size: cover;
     display: inline-block;
-    top: 0px;
     height: 210px;
     width: 210px;
     float: left;
     z-index: 1000;
     position: fixed;
+    top: 0;
+    left: 0;
 }
 
-
-/* 網站Image */
-
-div#header_image {
-    background: #4c9479 url("../images/web_banner.png");
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-}
-
-
-/* 系統名稱文字區塊 */
-
-div#header_title {
-    color: #ffffff;
-    font-size: 16px;
-    display: inline-block;
-    height: 27px;
-    right: 0;
-    padding: 4px;
-    width: 190px;
-    z-index: 1;
-    float: left;
-}
-
-
-/* 系統名稱文字區塊 */
-
-.header_table {
-    font-size: 20px;
-    display: inline-block;
-    height: 27px;
-    top: 15px;
-    right: 30px;
-    padding: 4px;
-    z-index: 1;
-    padding: 10px;
-    position: absolute;
-}
-
-
-/* 程式版本 */
-
-span#pg_version {
-    color: #ffffff;
-    font-size: 12px;
-    margin: 7px 7px 0 0;
-    float: left;
-}
-
+/* 左側選單 */
 div#leftmenu {
     background-color: #F2F2F2;
     border-right: 5px solid #a6d578;
     box-sizing: border-box;
-    clear: both;
-    display: block;
-    float: left;
-    overflow-x: hidden;
-    padding: 10px 10px 20px 5px;
     position: fixed;
     top: 210px;
+    left: 0;
     width: 211px;
+    height: calc(100vh - 210px);
+    overflow-y: auto;
+    padding: 10px;
+    z-index: 500;
+}
+
+/* 右側選單 */
+#rightmenu {
+    width: 311px;
+    background-color: #F2F2F2;
+    border-left: 5px solid #a6d578;
+    position: fixed;
+    overflow-y: auto;
+    display: block;
+    padding: 10px;
+    top: 0;
+    right: 0;
     height: 100vh;
     z-index: 500;
 }
+
+/********** [ 內容區塊 ] **********/
+
+/* Plans 主要容器 */
+.plans-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    margin-left: 211px;
+    max-width: 1200px;
+    width: calc(100% - 211px - 311px);
+}
+
+/* 主要內容區塊 */
+.content-area {
+    flex: 1;
+    max-width: 800px;
+}
+
+    .content-area h1 {
+        margin-top: 0;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+/* 產品圖片區塊 */
+.product-image {
+    display: flex;
+    background-color: #f8f8f8;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+}
+
+    .product-image img {
+        max-height: 75%;
+        max-width: 100%;
+        object-fit: contain;
+    }
+
+/********** [ 選單區塊 ] **********/
 
 #menutree {
     display: inline-block;
     font-size: 14px;
 }
 
-    #menutree a {
-        cursor: pointer;
-    }
-
-    /* 選單樣式 */
     #menutree ul {
         list-style: none;
         padding: 0;
@@ -387,7 +139,6 @@ div#leftmenu {
         border-bottom: 1px solid #ccc;
     }
 
-    /* 讓所有選單選項（包含 `<a>` 和 `<button>`）格式統一 */
     #menutree a,
     #menutree .menu-toggle {
         display: flex;
@@ -408,78 +159,72 @@ div#leftmenu {
     justify-content: space-between;
 }
 
-/* 子選單縮進 */
+/* 子選單 */
 .submenu {
     display: none;
-    padding-left: 20px; /* 子選單縮進 */
+    padding-left: 20px;
 }
 
     .submenu.open {
         display: block;
     }
 
-    /* 子選單的每個選項 */
     .submenu li {
         font-size: 14px;
         padding: 8px 10px;
         border-left: 3px solid #a6d578;
     }
 
-/* Plans 頁面主要容器 */
-.plans-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    margin-left: 211px; /* 預留左側選單的寬度，確保內容不被擋住 */
+/********** [ 按鈕 & 表單 ] **********/
+
+.button {
+    margin: 1px;
+    padding: 8px 6px 5px 1px;
+    font-size: 12px;
+    border-radius: 0.3rem;
+    width: auto;
+    height: 30px;
+    font-weight: bold;
+    box-shadow: 2px 2px 6px #BDBDBD;
+    border: 1px solid #4c9479;
+    display: inline-flex;
+    color: #4c9479;
+    background-color: #FFFFFF;
+    text-indent: 5px;
+    text-align: center;
+    line-height: 100%;
 }
 
-/* 中間內容區域 */
-.content-area {
-    flex: 1; /* 讓它自動填滿左邊可用空間 */
-/*    padding: 20px;*/
-    max-width: 800px;
-}
-
-    /* 讓 h1 置頂 */
-    .content-area h1 {
-        margin-top: 0; /* 移除預設的 margin */
-        padding-top: 0px; /* 可視情況微調 */
-        font-size: 28px; /* 增加標題大小 */
-        font-weight: bold;
+    .button:hover {
+        color: #FFFFFF;
+        background-color: #a6d578;
+        box-shadow: 2px 2px 6px 2px #fff;
+        border-color: #4c9479;
     }
 
-/* 產品圖片區塊 - 置中 */
-.product-image {
-    display: flex;
-    background-color: #f8f8f8;
-    padding: 20px;
-    justify-content: center; /* 水平置中 */
-    align-items: center; /* 垂直置中 */
-    height: 600px; /* 固定圖片區塊高度 */
+.button_disable {
+    margin: 1px;
+    padding: 8px 6px 5px 1px;
+    font-size: 12px;
+    border-radius: 0.3rem;
+    width: auto;
+    height: 30px;
+    font-weight: bold;
+    box-shadow: 2px 2px 6px #BDBDBD;
+    border: 1px solid rgba(124,125,125,1.00);
+    display: inline-flex;
+    color: rgba(111,112,112,1.00);
+    background-color: #DFDFDF;
+    text-indent: 5px;
+    text-align: center;
+    line-height: 100%;
 }
 
-    .product-image img {
-        max-height: 100%; 
-        width: auto; /* 保持比例 */
-        display: block;
-        margin: 0 auto; /* 確保圖片水平置中 */
-    }
-
-/* 右側區塊 */
-#rightmenu {
-    width: 250px;
-    background-color: #F2F2F2;
-    border-left: 5px solid #a6d578;
-    position: fixed;
-    overflow-y: auto;   
-    overflow-x: hidden;
-    display: block;
-    padding: 10px 10px 20px 5px;
-    top: 0px; /* 與視窗頂端的距離 */
-    right: 10px; /* 固定在視窗最右側 */
-    width: 311px;
-    height: 100vh; /* 設為視窗高度，讓選單充滿整個右側 */
-    z-index: 500;
+/* 禁用樣式 */
+button:disabled {
+    background-color: #DFDFDF;
+    color: rgba(111,112,112,1.00);
+    border: 1px solid rgba(124,125,125,1.00);
 }
 
 /* 語言選擇按鈕 */
@@ -493,21 +238,6 @@ div#leftmenu {
     cursor: pointer;
 }
 
-/* 廠商列表 */
-#rightmenu h2 {
-    font-size: 18px;
-    margin-top: 20px;
-}
-
-#rightmenu ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
-
-    #rightmenu ul li {
-        margin: 5px 0;
-    }
-
 /* 參與製造按鈕 */
 .manufacturing-btn {
     width: 100%;
@@ -519,4 +249,3 @@ div#leftmenu {
     cursor: pointer;
     margin-top: 10px;
 }
-
